fixed layouting issue where the Play button caption was cut off

--- a/resources/sass/GameView.scss
+++ b/resources/sass/GameView.scss
@@ -38,7 +38,7 @@
 }
 
 .card-data .col span {
-    padding-left: 5px;
+    padding-left: 4px;
 }
 
 .card-data .x-button {
